--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -66,6 +66,7 @@
     <Compile Include="Assets\Scripts\GameManager.cs" />
     <Compile Include="Assets\Scripts\Movement.cs" />
     <Compile Include="Assets\Scripts\Preview.cs" />
+    <Compile Include="Assets\Scripts\scores.cs" />
     <Reference Include="Unity.TextMeshPro.Editor">
       <HintPath>C:/Users/muqad/Desktop/Tetris github/tetris/Library/ScriptAssemblies/Unity.TextMeshPro.Editor.dll</HintPath>
     </Reference>
